--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="editTextBill">Bill</string>
+    <string name="editTextBillDefault">0.0</string>
     <string name="editTextTip">Tip</string>
     <string name="editTextFinal">Total</string>
     <string name="tipDefault">0.15</string>
